# Sutra

./: .dependency-cruiser.cjs  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.changeset/: README.md  config.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SUPPORT.md
artifacts/: pip-audit-sample.json
benchmarks/: README.md  agent_turn.bench.mjs  core_loop.bench.mjs  crdt_merge.bench.mjs  memory_retrieval.bench.mjs  package.json  router.bench.mjs  sync_roundtrip.bench.mjs
design/: README.md  memory.md  planner.md  reasoning.md  runtime.md  sync.md
docs/: OVERVIEW.md  PRD_MATRIX.md  README.md  ROADMAP.md
docs-site/: .gitignore  OWNERSHIP.md  README.md  index.md  package.json  tsconfig.json  typedoc.json
domains/: README.md
examples/: README.md  package.json
infra/: docker-compose.yml
knowledge-packs/: README.md
playground/: README.md  next.config.ts  package.json
rfcs/: 0000-template.md  0001-protocol-1.0-freeze.md  README.md
scripts/: _diff_lines.mjs  bump-protocol-1-0-0.mjs  check-audit-triage-policy.mjs  check-audit-triage-policy.test.mjs  check-changeset-config.mjs  check-conformance.mjs  (+128 more)
templates/fastapi-adapter/: README.md  package.json  pyproject.toml  tsconfig.json
templates/fastapi-adapter/app/: __init__.py  main.py  sync_store.py  wire_models.py
templates/fastapi-adapter/scripts/: smoke-transport.ts  smoke.py
templates/fastapi-adapter/transport/: http_sync_transport.ts
(+592 files in other folders)
