[project]
name = "sutra-fastapi-adapter"
version = "0.1.0"
description = "Sutra fastapi-adapter template — custom SyncTransport target without forking sutra-orchestrator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
